fixed text alignment issue in free quote section

--- a/style.css
+++ b/style.css
@@ -484,7 +484,6 @@ nav a:hover::after {
 .cta h2 {
     font-size: 2.2rem;
     display: block;
-    text-align: center;
     margin-bottom: 0.8rem;
     color: white;
     text-transform: none;
@@ -499,7 +498,6 @@ nav a:hover::after {
     line-height: 1.7rem;
     width: 60%;
     margin: auto;
-    text-align: center;
 }
 
 .cta a {
@@ -618,6 +616,10 @@ footer h2 {
 
     .testimonial-content {
         flex-direction: column;
+    }
+
+    .cta {
+        text-align: left;
     }
 
     .cta p {
